--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^7.6.0",
+    "eslint-plugin-react": "^7.20.5",
     "prettier": "2.0.5"
   },
   "keywords": [
