serve responsive image from Cloudinary

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bulma": "^0.9.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-source-cloudinary": "^0.1.14",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-cloudinary": "^1.0.1",
     "gatsby-transformer-csv": "^2.3.10",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
