--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "triroyal-net",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Company website for PT. TRIROYAL TIMURRAYA",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Justin Arista Kasin <justinarista@gmail.com>",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
@@ -45,7 +45,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/triroyal/triroyal.net"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
